# Amex

./: .gitignore  Data Intake  Data Validation  EDA.md  Group Members.xlsx  Project_Framing.md  README.md  debtcapacity.ipynb  feature_notes_sushanth.md  index.html  index_bkup.html  preprocess.py  preprocess_task7.py  preprocess_test.py  project.html  pyproject.toml  requirements.txt  task7_preprocessing.ipynb  unzip.py  ~$Group Members.xlsx
.kaggle/: kaggle.json
Data_Analytics/: ab
Data_Analytics/Domain_Understanding/: Class_imbalance.md  Credit_Risk_&_Scoring  Credit_Risk_&_Scoring.md  explainability.md
docs/: Class_imbalance.md  Model_Evaluation.md  Regulatory expectation.md
models/: 01_datapreparation.py  lightgbm_model.pkl  logistic_model.pkl  xgboost_model.pkl
scripts/: bootstrap.ps1
src/credit_default_prediction/: __init__.py  __main__.py  cli.py  config.py  train.py
src/credit_default_prediction/data_loading/: __init__.py  benchmark.py
src/credit_default_prediction/evaluation/: __init__.py
src/credit_default_prediction/explainability/: __init__.py
src/credit_default_prediction/model_training/: __init__.py
src/credit_default_prediction/preprocessing/: __init__.py
src/credit_default_prediction/utilities/: __init__.py
tests/: test_benchmark_data_loading.py  test_cli_benchmark.py
